crates/pg_syntax/tests/snapshots/postgres_regress/timestamp@35.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO TIMESTAMP_TBL VALUES ('1997-02-10 17:32:01-08');"
---
InsertStmt@0..60
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..25
    Ident@12..25 "TIMESTAMP_TBL"
  Whitespace@25..26 " "
  SelectStmt@26..58
    Values@26..32 "VALUES"
    Whitespace@32..33 " "
    Ascii40@33..34 "("
    List@34..58
      AConst@34..58
        Sconst@34..58 "'1997-02-10 17:32:01-08'"
  Ascii41@58..59 ")"
  Ascii59@59..60 ";"

