crates/pg_syntax/tests/snapshots/postgres_regress/timestamp@39.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO TIMESTAMP_TBL VALUES ('1997-06-10 17:32:01 -07:00');"
---
InsertStmt@0..64
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..25
    Ident@12..25 "TIMESTAMP_TBL"
  Whitespace@25..26 " "
  SelectStmt@26..62
    Values@26..32 "VALUES"
    Whitespace@32..33 " "
    Ascii40@33..34 "("
    List@34..62
      AConst@34..62
        Sconst@34..62 "'1997-06-10 17:32:01  ..."
  Ascii41@62..63 ")"
  Ascii59@63..64 ";"

