crates/pg_syntax/tests/snapshots/postgres_regress/timestamp@40.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO TIMESTAMP_TBL VALUES ('2001-09-22T18:19:20');"
---
InsertStmt@0..57
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..25
    Ident@12..25 "TIMESTAMP_TBL"
  Whitespace@25..26 " "
  SelectStmt@26..55
    Values@26..32 "VALUES"
    Whitespace@32..33 " "
    Ascii40@33..34 "("
    List@34..55
      AConst@34..55
        Sconst@34..55 "'2001-09-22T18:19:20'"
  Ascii41@55..56 ")"
  Ascii59@56..57 ";"

