crates/pg_syntax/tests/snapshots/postgres_regress/timestamp@42.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO TIMESTAMP_TBL VALUES ('2000-03-15 13:14:02 GMT-1');"
---
InsertStmt@0..63
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..25
    Ident@12..25 "TIMESTAMP_TBL"
  Whitespace@25..26 " "
  SelectStmt@26..61
    Values@26..32 "VALUES"
    Whitespace@32..33 " "
    Ascii40@33..34 "("
    List@34..61
      AConst@34..61
        Sconst@34..61 "'2000-03-15 13:14:02  ..."
  Ascii41@61..62 ")"
  Ascii59@62..63 ";"

